--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.5)), url(./images/background-winter.jpg);;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size:cover;
 }
 
 main {
@@ -42,6 +42,28 @@ p {
   width:300px;
   height: 300px;
   margin: 1.25em;
+  border: solid slategray 1px;
+  position: relative;
+}
+
+.backDoor p {
+    position: absolute;
+    top: 3rem;
+    left: 1rem;
+    right: 1rem;
+    text-align: center;
+    text-wrap: wrap;
+    color: black;
+}
+
+.backDoor a {
+    position: absolute;
+    bottom: 3rem;
+    left: 1rem;
+    right: 1rem;
+    text-align: center;
+    text-wrap: wrap;
+    color: black;
 }
 
 .door
@@ -50,8 +72,9 @@ p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border: 2px dashed slategray;
-  border-left: 3px solid slategray;
+  border: 3px dashed black;
+  border-left: 3px solid black;
+  position: absolute;
   top:0px;
   left:0px;
   width:100%;
