--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.5)), url(./images/background-winter.jpg);;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url(./images/background-winter.jpg);;
     background-repeat: no-repeat;
     background-position: center;
-    background-size:cover;
+    background-size: cover;
+
 }
 
 main {
@@ -25,6 +26,7 @@ p {
     font-family: "Montserrat";
     font-size: 1.5em;
     color: black;
+    margin: 0 10%;
 }
 
 .luukku-container {
@@ -38,40 +40,59 @@ p {
 
 .backDoor
 {
-  background-color: #e2e2e2;
-  width:300px;
-  height: 300px;
-  margin: 1.25em;
+  background-color: #ffffff;
+  width:350px;
+  height: 350px;
+  margin: 2em;
   border: solid slategray 1px;
   position: relative;
 }
 
-.backDoor p {
+.luukku-header {
     position: absolute;
-    top: 3rem;
+    top: 2rem;
     left: 1rem;
     right: 1rem;
     text-align: center;
     text-wrap: wrap;
-    color: black;
+    color: slategray;
+    text-decoration: none;
 }
 
-.backDoor a {
+.luukku-header:hover {
+    color: rgb(185, 189, 192);
+}
+
+
+
+.luukku-img {
     position: absolute;
-    bottom: 3rem;
-    left: 1rem;
-    right: 1rem;
-    text-align: center;
-    text-wrap: wrap;
-    color: black;
+    width: 100%;
+    height: 225px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.luukku-img img:hover {
+    opacity: 0.75;
+}
+
+.luukku-img img {
+    width: 100%;
+    overflow: hidden;
 }
 
 .door
 {
-  background-image: url(./images/background-winter.jpg);
+  /*background-image: url(./images/background-winter.jpg);*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-color: white;
   border: 3px dashed black;
   border-left: 3px solid black;
   position: absolute;
@@ -86,11 +107,28 @@ p {
 }
   /*perspective creates the door open effect*/
 
+.doorOne {
+    background-image: url(./images/luukku-1.jpg);
+}
+
+.doorTwo {
+    background-image: url(./images/luukku-2.jpg);
+}
+
+.doorThree {
+    background-image: url(./images/luukku-3.jpg);
+}
+
+.doorFour {
+    background-image: url(./images/luukku-4.jpg);
+}
+
+
 .door:hover {
     cursor: pointer;
 }
 
-.backDoor:hover {
+.backDoor a:hover {
     cursor: pointer;
 }
 /*
