--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(./images/background-winter.jpg);;
+    background-image: url(./images/background-winter.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
